# neotron

./: .coveragerc  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .sops.yaml  AI-ARCHITECTURE-REPORT.json  ARCHITECTURE.md  CLAUDE.md  ECOSYSTEM.md  GOVERNANCE.md  INSTRUCTIONS.md  INTEGRATION_PLAN.md  INVESTIGACAO_FORENSE_BUGS.md  Makefile  PLANO_200_DOLARES.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SKILL.md  SPEC.md  VALIDACAO_PROJETO_2026.md  conftest.py  dag_bridge.py  docker-compose.yml  dspy_adapter.py  ensemble_reasoning.py  flake.nix  foundry.toml  init-db.sql  justfile  main.py  models.py  neotron.skill  note.md  optimizer.py  pyproject.toml  requirements.txt  resume.md  strace_model_auditor.html  (+5 more)
.chain/: chain_manager.py
.claude/: SKILL.md
.github/: markdown-link-check-config.json  pipeline.yml  sentinel-ci.yml
.github/workflows/: adr-validation.yml  ci.yml  nix-check.yml  release.yml  secret-scan.yml
.hooks/: feature_detector.py
.schema/: stf.schema.json
.stf/: neutron.stf
config/: integrations.yaml
contracts/: .env.example  .gitignore  DEPLOYMENT_SUMMARY.md  README.md  check_balance.sh  foundry.toml
contracts/deployments/: README.md  dao-localhost.json  localhost.json  sepolia.json  supply-chain-localhost.json
contracts/script/: Deploy.s.sol  DeployDAO.s.sol  DeploySupplyChain.s.sol
contracts/src/: AuditLogger.sol  ComplianceGuardrail.sol  EmergencyStop.sol  LGPDConsent.sol  LendingProtocol.sol  PriceOracle.sol
contracts/test/: AuditLogger.t.sol  ConsentBugValidation.t.sol  EmergencyStop.t.sol  IntelAgentDAO.t.sol  LGPDConsent.t.sol  LendingProtocol.t.sol  PriceOracle.t.sol
demos/: eu_ai_act_demo.py  test_4layer_flow.py  test_llm_integration.py
docs/: ANALISE_PROJETO_NEUTRON_2026.md  API.md  BASTION_TESTING.md  CHANGELOG.md  CI_CD_GUIDE.md  CI_CD_README.md  CONTRIBUTING.md  DEPLOYMENT.md  INSTALL.md  LLM_INTEGRATION.md  MVP.md  NEXT_SESSION.md  NEXUS.md  NIX_INTEGRATION.md  PHASE1_PROGRESS.md  PHASE1_QUICKSTART.md  PLANO_REALISTA_PRODUCAO.md  PROBLEMAS_ATUAIS.md  PROJECT_STATUS.md  README.md  RECOVERY_LOG_20260126.md  ROADMAP.md  SECURITY.md  SENTINEL_DESIGN.md  SENTINEL_GUIDELINES.md  SENTINEL_SHOWCASE.md  SENTINEL_USAGE.md  SHOWCASE.md  SMART_CONTRACTS_AUDIT_20260126.md  TEST_AUDIT.md  TODO.md  WEEK1_COMPLETE.md  api_integration.md  audit_results.md  eu_ai_act_compliance.md  quickstart_pilot.md
docs/architecture/: ADR_002_NATS_EVENT_BUS.md  ADR_003_ZK_FRAMEWORK.md  ADR_004_COMPLIANCE_ENFORCEMENT.md  ADR_004_ZK_COMMONS.md  ADR_005_EPHEMERAL_ENCRYPTION.md  ADR_006_LANDLOCK_NAMESPACE.md  ADR_007_IPGUARD_PLACEMENT.md  ADR_008_DAO_FRAMEWORK.md  ADR_LOG.md  AI-ARCHITECTURE-REPORT.md  BLUEPRINT.md  ECOSYSTEM_DIAGRAMS.md
docs/deployment/: nixos.md
docs/langmath/: AGENTS.md  DAG_README.md  FINAL_SUMMARY.md  MATH_README.md  PROJECT_SUMMARY.md  README.md  TEMPORAL_README.md  pyproject.upstream.toml
docs/planning/: NEXT-STEPS.md
docs/reports/: BASTION_OVERVIEW.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  WEEK3_COMPLETE.md  WEEK7_COMPLETE.md  WEEK8_COMPLETE.md
docs/security/: BLOCKCHAIN_SECRETS_SETUP.md
frontend/: .env.example  README.md  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
integrations/: __init__.py  unified_cost_reporter.py
neutron/: __init__.py
neutron/agents/: __init__.py  _llm_http_client.py  cortex.py  document_agent.py  llm_client.py  providers.py  synapse.py
neutron/api/: audit_endpoints.py  audit_store.py  auth.py  auth_endpoints.py  compliance.py  consent_endpoints.py  consent_store.py  oracle_endpoints.py  policy_endpoints.py  policy_store.py  server.py
neutron/bastion/: __init__.py  ephemeral.py  landlock.py  namespaces.py  seccomp.py
neutron/cli/: __init__.py  main.py
neutron/compliance/: README.md  __init__.py  audit_logger.py  bastion.py  events.py  nexus_flow.py  schema.sql  sentinel.py  temporal_guard.py  watchdog_agent.py
neutron/core/: __init__.py  config.py  models.py  sops.py
neutron/defi/: __init__.py  models.py  monitor.py
neutron/events/: __init__.py  bridge.py  cli_commands.py
neutron/gui/: app.py  main_window.py  tasks_view.py
neutron/integration/: __init__.py  dag_bridge.py  unified_cost_reporter.py
neutron/langmath/: __init__.py  algebra_demo.py  chaos_runner.py  cli.py  config.py  forensic_dag.py  linguistic_algebra.py  neutron_integration.py  nuance_detector.py  subtle_attacks.py  temporal_reputation.py
neutron/license/: __init__.py
neutron/memory/: __init__.py  episodic.py  memory_store.py  procedural.py  schema.sql  synapse.py  working.py
neutron/ml-lab/: cerebro_optimizer.py
neutron/optimization/: __init__.py  optimizer.py
neutron/orchestration/: __init__.py  cortex.py  defi_workflow.py  nexus_workflow.py  worker.py  workflows.py
neutron/plugins/: __init__.py
neutron/reasoning/: __init__.py  dspy_adapter.py  ensemble_reasoning.py  oracle.py
neutron/scripts/: audit_compliance.py  demo_swarm.py
neutron/security/: __init__.py  git_scanner.py  nix_checker.py
neutron/siem/: __init__.py  exporters.py  formatters.py
neutron/spectre/: __init__.py  client.py
neutron/storage/: __init__.py  decentralized.py
neutron/tracking/: __init__.py  cost_tracker.py
neutron/training/: __init__.py  trainers.py
nix/: pre-commit.nix
nix/langmath/: flake.upstream.nix
plans/: langmath-owasaka-integration.md
scripts/: adr  chain-resign.sh  demo_4layer.py  demo_bastion.py  demo_cortex_live.py  demo_document_ingestion.py  demo_nexus.py  demo_phase2.py  demo_phase3.py  demo_sentinel.py  e2e-contracts.sh  launch_platform.sh  phantom-scan-check.sh  run_all_tests.py  setup_compliance_db.sh  validate.sh  verify_integration.py
secrets/: nexus.enc.yaml
temporal-config/: development-sql.yaml
tests/: __init__.py  conftest.py  smoke_enforcement.sh  test_cost_tracker.py  test_models.py  test_optimizer.py  test_trainers.py  test_workflows.py
tests/agents/: test_cortex.py  test_llm_client.py  test_providers.py  test_specialized.py
tests/api/: test_audit.py  test_auth.py  test_consent.py  test_policies.py
(+104 files in other folders)
