[project]
name = "neutron-ml-pipeline"
version = "0.1.0"
description = "Adaptive ML Pipeline - Temporal + Ray + MLflow orchestration"
authors = [{ name = "kernelcore", email = "kernelcore@neutron.ai" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "temporalio==1.5.1",
  "ray[default]>=2.9.0",      # Relaxed for Py3.13 support
  "mlflow==2.10.2",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "transformers>=4.36.0",
  "datasets>=2.16.0",
  "accelerate>=0.26.0",
  "sentencepiece>=0.1.99",
  "safetensors>=0.4.1",
  "numpy>=1.24.0",
  "scipy>=1.11.0",
  "scikit-learn>=1.3.0",
  "pandas>=2.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "psycopg2-binary>=2.9.9",
  "sqlalchemy>=2.0.0",
  "python-dotenv>=1.0.0",
  "tenacity>=8.2.3",
  "tqdm>=4.66.0",
  "click>=8.1.0",
  "PyGObject>=3.46.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "black>=23.12.0",
  "ruff>=0.1.9",
  "mypy>=1.8.0",
  "ipython",
  "jupyter",
]
cerebro = ["google-cloud-bigquery>=3.14.0"]

[project.scripts]
neutron-gui = "neutron.gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neutron"]

[tool.uv]
index-url = "https://pypi.org/simple"
# Removing extra-index-url to allow PyPI resolution for Py3.13

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [".venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = ["integration: Integration tests", "benchmark: Benchmark tests"]
