[project]
name = "neutron-ml-pipeline"
version = "0.1.0"
description = "Enterprise-Grade AI Agent Orchestration with Compliance-as-Code"
authors = [{ name = "kernelcore", email = "kernelcore@neutron.ai" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "temporalio>=1.6.0",
  "ray[default]>=2.10.0",      # Relaxed for Py3.13 support
  "mlflow>=2.14.0",
  "pyarrow>=18.0.0",
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "transformers>=4.38.0",
  "datasets>=2.18.0",
  "accelerate>=0.28.0",
  "sentencepiece>=0.2.0",
  "safetensors>=0.4.2",
  "numpy>=1.26.0",
  "scipy>=1.12.0",
  "scikit-learn>=1.4.0",
  "pandas>=2.2.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "psycopg2-binary>=2.9.9",
  "sqlalchemy>=2.0.0",
  "python-dotenv>=1.0.0",
  "tenacity>=8.2.3",
  "tqdm>=4.66.0",
  "click>=8.1.0",
  "PyGObject>=3.46.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "black>=23.12.0",
  "ruff>=0.1.9",
  "mypy>=1.8.0",
  "ipython",
  "jupyter",
]
cerebro = ["google-cloud-bigquery>=3.14.0"]

[project.scripts]
neutron = "neutron.cli.main:main"
neutron-worker = "neutron.orchestration.worker:main"
neutron-gui = "neutron.gui.app:main"
neutron-dag = "neutron.integration.dag_bridge:main"
neutron-cost = "neutron.tracking.cost_tracker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neutron"]

[tool.uv]
index-url = "https://pypi.org/simple"
# Removing extra-index-url to allow PyPI resolution for Py3.13

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [".venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = ["integration: Integration tests", "benchmark: Benchmark tests"]
