[project]
name = "neutron-nexus"
version = "0.1.0"
description = "Enterprise-Grade AI Agent Orchestration with Compliance-as-Code"
authors = [{ name = "kernelcore", email = "kernelcore@neutron.ai" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  # Compliance orchestration
  "temporalio>=1.6.0",
  # API
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  # Database / storage
  "psycopg2-binary>=2.9.9",
  "sqlalchemy>=2.0.0",
  # Utilities
  "python-dotenv>=1.0.0",
  "tqdm>=4.66.0",
  "click>=8.1.0",
  "PyYAML>=6.0.3",
  # Note: ML deps (mlflow, ray, torch, anthropic, openai, dspy, etc.)
  # have been moved to ml-offload-api/python/pyproject.toml (mlops package)
  "lint (>=1.2.1,<2.0.0)",
  "pip (>=26.0.1,<27.0.0)",
  "numpy>=2.4.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "httpx>=0.27.0",              # FastAPI TestClient
  "black>=23.12.0",
  "ruff>=0.1.9",
  "mypy>=1.8.0",
  "ipython",
  "jupyter",
  "numpy>=1.26.0",
]
cerebro = ["google-cloud-bigquery>=3.14.0"]

[project.scripts]
neutron = "neutron.cli.main:main"
neutron-worker = "neutron.orchestration.worker:main"
neutron-gui = "neutron.gui.app:main"
neutron-dag = "neutron.integration.dag_bridge:main"
# neutron-cost moved to mlops package (ml-offload-api/python/)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neutron"]

[tool.poetry]
packages = [{include = "neutron"}]

[tool.uv]
index-url = "https://pypi.org/simple"
# Removing extra-index-url to allow PyPI resolution for Py3.13

[tool.black]
line-length = 100
target-version = ['py313']
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [".venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short -m 'not integration'"
markers = [
    "integration: Integration tests",
    "benchmark: Benchmark tests",
    "asyncio: Async test (handled by conftest.py)",
]
